Fixed Dark Mode For Navbar and Sidebar

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -125,3 +125,7 @@ nav {
     justify-content: flex-start;
   }
 }
+
+.page-item{
+  z-index: 0;
+}
