--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -10,8 +10,8 @@
   justify-content: space-between;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
-  border-bottom: 3px solid rgb(28, 174, 184);
-  z-index: 5;
+  /* border-bottom: 3px solid rgb(28, 174, 184); */
+  z-index: 1;
   isolation: isolate;
   mix-blend-mode:normal;
   
@@ -54,7 +54,7 @@
   background-color: #8b5cf6;
   position: fixed;
   top: 4.4rem;
-  z-index: 1000;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   font-size: 1.4rem;
